[project]
name = "vision_analysis_crew"
version = "0.1.0"
description = "vision_analysis_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
vision_analysis_crew = "vision_analysis_crew.main:run"
run_crew = "vision_analysis_crew.main:run"
train = "vision_analysis_crew.main:train"
replay = "vision_analysis_crew.main:replay"
test = "vision_analysis_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.10",
]


[tool.ruff]  # https://docs.astral.sh/ruff/settings/#top-level
line-length = 100
exclude = ["**/migrations/", "**/manage.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]